--- a/app/views/templates/dashboard.html.erb
+++ b/app/views/templates/dashboard.html.erb
@@ -1,1 +1,2 @@
-<h2>hello dashboard</h2>
+<button class="btn btn-default btn-sm" ng-click="addItem()">Add Item</button>
+<p>kwkwk哈哈中国The body of the accordion group grows to fit the contents</p>
