--- a/app/views/templates/dashboard.html.erb
+++ b/app/views/templates/dashboard.html.erb
@@ -1,2 +1,8 @@
-<button class="btn btn-default btn-sm" ng-click="addItem()">Add Item</button>
-<p>kwkwk哈哈中国The body of the accordion group grows to fit the contents</p>
+<script type="text/ng-template" id="myModalContent.html">
+</script>
+<div ng-init="init()">
+  <div ng-repeat="list in lists">
+    <button class="btn btn-default btn-sm" ng-click="open()">Add Content</button>
+    <p>{{list.id}}<br>{{list.text}}</p>
+  </div>
+</div>
