--- a/app/views/templates/myModalEditContent.html
+++ b/app/views/templates/myModalEditContent.html
@@ -1,17 +1,14 @@
 <div class="modal-header">
-  <h3 class="modal-title">I'm a modal!</h3>
+  <h3 class="modal-title">I'm a edit modal!</h3>
 </div>
 <div class="modal-body">
   <ul>
     <input type="text" ng-model="formData.currentContent" class="form-control">
-    <li ng-repeat="item in items">
-    <a ng-click="selected.item = item">{{ item }}</a>
     </li>
   </ul>
-  Selected: <b>{{ selected.item }}</b>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="ok()">OK</button>
+  <button class="btn btn-primary" ng-click="update()">Update</button>
   <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
 
