--- a/app/views/templates/myModalContent.html
+++ b/app/views/templates/myModalContent.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
   <ul>
-    <input type="text" ng-model="formData.currentContent" class="form-control">
+    <input type="text" ng-model="formData.content" class="form-control">
     <li ng-repeat="item in items">
     <a ng-click="selected.item = item">{{ item }}</a>
     </li>
