添加增加URL、IMG、Video的代码

--- a/app/views/templates/book.html
+++ b/app/views/templates/book.html
@@ -1,6 +1,6 @@
+<h2>书籍一览<h2>
 <script type="text/ng-template" id="chapter.html>"></script>
 <div ng-init="books_init()">
-
     <div class="list-group">
 
         <div class="list-group-item"  ng-repeat="book in books">
